08-service/01-simple-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-deployment
  template:
    metadata:
      labels:
        app: simple-deployment
    spec:
      containers:
        - name: simple-pod
          image: mhausenblas/simpleservice:0.4.0
          ports:
            - containerPort: 9876
